--- a/Aula10/exc10.html
+++ b/Aula10/exc10.html
@@ -12,16 +12,38 @@
             color: white;
             width: 200px;
             height: 200px;
-            line-height: 200px;
-            text-align: center;
+            line-height: 200px; /* Alinha pelo topo */
+            text-align: center; /* Alinha na hotizontal */
         }
     </style>
 </head>
 <body>
-    <div id="area">
+    <div id="area"> <!-- onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()" // utilizando dentro da tag div -->
         Interaja...
 
     </div>
+
+    <script>
+        var a = window.document.getElementById('area')
+        a.addEventListener('click', clicar)
+        a.addEventListener('mouseenter', entrar)
+        a.addEventListener('mouseout', sair)
+
+        function clicar(){    
+            a.innerText = "Clicou!"
+            a.style.background = 'Blue'
+        }
+
+        function entrar(){
+            a.innerText = "Entrou!"
+            a.style.background = 'red'
+        }
+
+        function sair(){
+            a.innerText = "Saiu!"
+            a.style.background = "green"
+        }
+    </script>
     
 </body>
 </html>
