--- a/Aula13 modelo/Exc13.html
+++ b/Aula13 modelo/Exc13.html
@@ -7,16 +7,16 @@
     <title>Modelo de Exercício</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body onload="carregar()">
+<body>
     <header>
-        <h1 id='titulo'>Título</h1>
+        <h1>Título</h1>
     </header>
     <section>
-        <div id="msg">
-            Aqui vai aparecer a hora
+        <div>
+            testando...
         </div>
-        <div id='foto'>
-            <img id='img' src="manha.png" alt="Foto do dia">
+        <div>
+            Olá
         </div>
 
     </section>
