--- a/Aula15-extra/Soma/index.html
+++ b/Aula15-extra/Soma/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soma de dois números</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="script.js">
 </head>
 
 <body>
@@ -18,13 +19,13 @@
             <h2>Digite dois números</h2>
             <input type="number" name="txt1" id="txtn1"> +
             <input type="number" name="txt2" id="txtn2">
-            <input type="button" value="Somar" onclick="soma()" id="soma">
+            <input type="button" value="Somar" onclick="somar()">
         </div>
         <div id="res">
             Resultado
         </div>
     </section>
-    <footer id=" rodape ">
+    <footer id="rodape">
         <p>Company &copy; Fernando Cruz</p>
     </footer>
 
