--- a/Aula15-extra/Soma/index.html
+++ b/Aula15-extra/Soma/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soma de dois números</title>
     <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="script.js">
+    <!--    <link rel="stylesheet" href="script.js"> -->
 </head>
 
 <body>
@@ -19,7 +19,7 @@
             <h2>Digite dois números</h2>
             <input type="number" name="txt1" id="txtn1"> +
             <input type="number" name="txt2" id="txtn2">
-            <input type="button" value="Somar" onclick="somar()">
+            <input type="button" value="Somar" onclick="somar()" id="soma">
         </div>
         <div id="res">
             Resultado
@@ -28,7 +28,18 @@
     <footer id="rodape">
         <p>Company &copy; Fernando Cruz</p>
     </footer>
-
+    <script>
+        function somar() {
+            /* alert('tudo certo até aqui') */
+            var tn1 = window.document.getElementById("txtn1")
+            var tn2 = window.document.getElementById("txtn2")
+            var res = window.document.getElementById("res")
+            var n1 = Number(tn1.value)
+            var n2 = Number(tn2.value)
+            var s = n1 + n2
+            res.innerHTML = `A soma entre ${n1} e ${n2} é igual a <strong>${s}</strong>`
+        }
+    </script>
 </body>
 
 </html>
