Adicionando o estilo.css

--- a/Aula15-extra/Verificar-idade/index.html
+++ b/Aula15-extra/Verificar-idade/index.html
@@ -16,11 +16,13 @@
     <section>
         <div>
             <p>
-                Digite seu nome: <input type="string" name="txtnome" id="txtnome">
+                Digite seu nome:
+                <input type="string" name="txtnome" id="txtnome">
             </p>
 
             <p>
-                Digite o anoque nasceu: <input type="date" name="data" id="data">
+                Digite o anoque nasceu:
+                <input type="date" name="data" id="data">
             </p>
             <input type="button" value="Verificar" onclick="verificar()" id="verifica">
         </div>
@@ -29,7 +31,7 @@
         </div>
     </section>
     <footer>
-        Company &copy; Fernando Cruz;
+        Company &copy; Fernando Cruz
     </footer>
 </body>
 
