--- a/Aula17/index.html
+++ b/Aula17/index.html
@@ -24,8 +24,8 @@
                 <input type="number" name="txt02" id="txtn2">
             </p>
             <p>
-                Passe:
-                <input type="number" name="passe" id="passe">
+                Passo:
+                <input type="number" name="passo" id="passo">
             </p>
             <p>
                 <input type="button" value="Contar" onclick="contar()" id="contar">
@@ -36,30 +36,11 @@
             Preparando a contagem...
         </div>
     </section>
-    <footer id="Rodape">
+    <footer id="rodape">
         Company &copy; Fernando Cruz
     </footer>
-    <script>
-        function contar() {
-            var txn1 = window.document.getElementById("txtn1")
-            var txn2 = window.document.getElementById("txtn2")
-            var passe = window.document.getElementById("passe")
-            var res = window.document.querySelector("div#res")
-            var n1 = Number(txn1.value)
-            var n2 = Number(txn2.value)
-            var c = Number(passe.value)
-                // alert(`${n1}, ${n2} e ${c}`)
-            if (txtn1.value == 0 || txtn2.value == 0) {
-                alert(`[ERRO!] Digite um número.`)
-            }
-            while (n1 <= n2) {
-                alert(`${c}`)
-                c++
-            }
-
-        }
+    <script src="script.js">
     </script>
-
 
 </body>
 
