--- a/Aula20/AnalisadorNUm.html
+++ b/Aula20/AnalisadorNUm.html
@@ -18,12 +18,12 @@
             <p>
                 Número (entre 1 e 100)
                 <input type="number" name="txtnum" id="txtnum">
-                <input type="button" value="Adicionar" onclick="adiciona()">
+                <input type="button" value="Adicionar" onclick="adiciona()" id="add">
             </p>
         </div>
-        <div>
+        <div id="fim">
             <p>vetor</p>
-            <input type="button" value="Finalizar" onclick="finaliza()">
+            <input type="button" value="Finalizar" onclick="finaliza()" id="final">
         </div>
     </section>
     <footer>
