adicionando a funcionalidade dos botões

--- a/Aula20/AnalisadorNUm.html
+++ b/Aula20/AnalisadorNUm.html
@@ -21,14 +21,21 @@
                 <input type="button" value="Adicionar" onclick="adiciona()" id="add">
             </p>
         </div>
+
         <div id="fim">
-            <p>vetor</p>
+            <p id="vet">vetor</p>
+        </div>
+
+        <div>
             <input type="button" value="Finalizar" onclick="finaliza()" id="final">
         </div>
+
+        <div id="res"></div>
     </section>
     <footer>
         Company &copy; Fernando Cruz
     </footer>
+    <script src="script.js"></script>
 
 </body>
 
