--- a/Aula20/AnalisadorNUm.html
+++ b/Aula20/AnalisadorNUm.html
@@ -18,16 +18,17 @@
             <p>
                 Número (entre 1 e 100)
                 <input type="number" name="txtnum" id="txtnum">
-                <input type="button" value="Adicionar" onclick="adiciona()" id="add">
+                <input type="button" value="Adicionar" onclick="adicionar()" id="add">
             </p>
         </div>
 
         <div id="fim">
-            <p id="vet">vetor</p>
+            <p id="vet">
+                <select name="numeros" id="lista" size="10"></select></p>
         </div>
 
         <div>
-            <input type="button" value="Finalizar" onclick="finaliza()" id="final">
+            <input type="button" value="Finalizar" onclick="finalizar()" id="final">
         </div>
 
         <div id="res"></div>
